@@ -1,17 +1,27 @@
 # Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
-
 sudo: required
+dist: bionic
 
-dist: trusty
+jobs:
+  include:
+    - name: linux
+      os: linux
+    - name: macOS
+      os: osx
+
+env:
+  global:
+    - USE_BSPM="true"
+    - _R_CHECK_FORCE_SUGGESTS_="false"
 
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
   - ./run.sh bootstrap
 
 install:
-  - ./run.sh install_aptget r-cran-curl
+  - ./run.sh install_deps
 
 script:
   - ./run.sh run_tests
