@@ -1,3 +1,9 @@
+2020-09-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Added 'last commit' badge
+
+	* .travis.yml: Update to 'bionic', R 4.0, and BSPM
+
 2019-08-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Author): Use name without email as in other packages
